It appears as though some badly formated CSS can cause form fields to be disabled on IE 6.  I believe this resolves the issue.
References #1145

git-svn-id: http://svn.topazproject.org/svn/head@7501 48088309-b40f-0410-b149-b14953253675

--- a/ambra/webapp/src/main/webapp/css/user_screen.css
+++ b/ambra/webapp/src/main/webapp/css/user_screen.css
@@ -52,9 +52,11 @@ h6			{ font-size: .9em; }
 ----------------------------------------------------------
 */
 #hdr,
-#container	{ margin: 0 auto; min-width: 675px; max-width: 910px; }
-#container 	{ position: relative; }
-
+#container 			{ position: relative; }
+#container, #hdr	{ margin: 0 auto; width:930px; }
+body > #container,
+body > #container > #hdr	{ margin: 0 auto; width:auto; min-width: 675px; max-width: 930px; } /* min-width and max-width overrides for modern browsers */
+#content 			{ margin: 30px 4px 50px 22px; line-height: 1.8em; font-size: .9em; }
 
 /* Header : Elements
 ----------------------------------------------------------
